// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description list Default renders correctly 1`] = `
<jest>
  <dl
    class="ecl-description-list"
    data-ecl-auto-init="DescriptionList"
    data-ecl-description-list=""
    data-ecl-description-list-more-label="See all items"
    data-ecl-description-list-visible-items="2"
  >
    <dt
      class="ecl-description-list__term"
    >
      Standard text
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      Lorem ipsum dolor sit amet, 
      <a
        class="ecl-link"
        href="/example"
      >
        consectetur adipiscing elit
      </a>
      . Suspendisse ut sapien condimentum, aliquet turpis sit amet, finibus purus. Donec porttitor iaculis felis ut dapibus. Sed blandit, massa ac suscipit facilisis
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      External standalone link
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--link"
      data-ecl-description-list-collapsible=""
    >
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Standalone link
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#external"
          />
        </svg>
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Links inline
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--inline"
      data-ecl-description-list-collapsible=""
    >
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Socials
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--link"
      data-ecl-description-list-collapsible=""
    >
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#facebook-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          facebook
        </span>
      </a>
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#twitter-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          twitter
        </span>
      </a>
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#mastodon-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          mastodon
        </span>
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Taxonomy list
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
      data-ecl-description-list-collapsible=""
    >
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 1
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        <a
          class="ecl-link"
          href="/example"
        >
          Taxonomy item 2
        </a>
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 3
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 4
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        <a
          class="ecl-link"
          href="/example"
        >
          Taxonomy item 5
        </a>
      </span>
    </dd>
  </dl>
</jest>
`;

exports[`Description list Default renders correctly in the horizontal variant 1`] = `
<jest>
  <dl
    class="ecl-description-list ecl-description-list--horizontal"
  >
    <dt
      class="ecl-description-list__term"
    >
      Standard text
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      Lorem ipsum dolor sit amet, 
      <a
        class="ecl-link"
        href="/example"
      >
        consectetur adipiscing elit
      </a>
      . Suspendisse ut sapien condimentum, aliquet turpis sit amet, finibus purus. Donec porttitor iaculis felis ut dapibus. Sed blandit, massa ac suscipit facilisis
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      External standalone link
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--link"
    >
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Standalone link
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#external"
          />
        </svg>
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Links inline
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--inline"
    >
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Socials
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--link"
    >
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#facebook-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          facebook
        </span>
      </a>
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#twitter-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          twitter
        </span>
      </a>
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#mastodon-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          mastodon
        </span>
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Taxonomy list
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
    >
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 1
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        <a
          class="ecl-link"
          href="/example"
        >
          Taxonomy item 2
        </a>
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 3
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 4
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        <a
          class="ecl-link"
          href="/example"
        >
          Taxonomy item 5
        </a>
      </span>
    </dd>
  </dl>
</jest>
`;

exports[`Description list Default renders correctly with extra attributes 1`] = `
<jest>
  <dl
    class="ecl-description-list"
    data-ecl-auto-init="DescriptionList"
    data-ecl-description-list=""
    data-ecl-description-list-more-label="See all items"
    data-ecl-description-list-visible-items="2"
  >
    <dt
      class="ecl-description-list__term"
    >
      Standard text
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      Lorem ipsum dolor sit amet, 
      <a
        class="ecl-link"
        href="/example"
      >
        consectetur adipiscing elit
      </a>
      . Suspendisse ut sapien condimentum, aliquet turpis sit amet, finibus purus. Donec porttitor iaculis felis ut dapibus. Sed blandit, massa ac suscipit facilisis
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      External standalone link
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--link"
      data-ecl-description-list-collapsible=""
    >
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Standalone link
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#external"
          />
        </svg>
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Links inline
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--inline"
      data-ecl-description-list-collapsible=""
    >
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Socials
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--link"
      data-ecl-description-list-collapsible=""
    >
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#facebook-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          facebook
        </span>
      </a>
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#twitter-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          twitter
        </span>
      </a>
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#mastodon-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          mastodon
        </span>
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Taxonomy list
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
      data-ecl-description-list-collapsible=""
    >
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 1
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        <a
          class="ecl-link"
          href="/example"
        >
          Taxonomy item 2
        </a>
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 3
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 4
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        <a
          class="ecl-link"
          href="/example"
        >
          Taxonomy item 5
        </a>
      </span>
    </dd>
  </dl>
</jest>
`;

exports[`Description list Default renders correctly with extra class names 1`] = `
<jest>
  <dl
    class="ecl-description-list custom-class custom-class--test"
    data-ecl-auto-init="DescriptionList"
    data-ecl-description-list=""
    data-ecl-description-list-more-label="See all items"
    data-ecl-description-list-visible-items="2"
  >
    <dt
      class="ecl-description-list__term"
    >
      Standard text
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      Lorem ipsum dolor sit amet, 
      <a
        class="ecl-link"
        href="/example"
      >
        consectetur adipiscing elit
      </a>
      . Suspendisse ut sapien condimentum, aliquet turpis sit amet, finibus purus. Donec porttitor iaculis felis ut dapibus. Sed blandit, massa ac suscipit facilisis
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      External standalone link
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--link"
      data-ecl-description-list-collapsible=""
    >
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Standalone link
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#external"
          />
        </svg>
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Links inline
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--inline"
      data-ecl-description-list-collapsible=""
    >
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
      <a
        class="ecl-link ecl-description-list__definition-item"
        href="/example"
      >
        Lorem ipsum dolor sit amet
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Socials
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--link"
      data-ecl-description-list-collapsible=""
    >
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#facebook-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          facebook
        </span>
      </a>
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#twitter-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          twitter
        </span>
      </a>
      <a
        class="ecl-link ecl-link--icon ecl-description-list__definition-item"
        href="/example"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons-social-media.svg#mastodon-color"
          />
        </svg>
        <span
          class="ecl-link__label"
        >
          mastodon
        </span>
      </a>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Taxonomy list
    </dt>
    <dd
      class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
      data-ecl-description-list-collapsible=""
    >
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 1
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        <a
          class="ecl-link"
          href="/example"
        >
          Taxonomy item 2
        </a>
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 3
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        Taxonomy item 4
      </span>
      <span
        class="ecl-description-list__definition-item"
      >
        <a
          class="ecl-link"
          href="/example"
        >
          Taxonomy item 5
        </a>
      </span>
    </dd>
  </dl>
</jest>
`;
